[package]
name = "My_Game"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
bevy = "0.18"
bevy_common_assets = { version = "0.16", features = ["ron"] }
serde = { version = "1", features = ["derive"] }
pathfinding = "4"
rand = "0.10"
bevy_procedural_tilemaps = "0.3"
nalgebra = "0.34.2"
num-traits = "0.2.19"
bevy_northstar = "0.5"
getrandom = { version = "0.2", features = ["js"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
